--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>netREx</title>
+		<title>NetREx</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
