--- a/frontend/query.html
+++ b/frontend/query.html
@@ -33,8 +33,8 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    netrex
-                    <!-- <img src="assets/img/logo/logo.png" alt=""> -->
+                    <!-- netrex -->
+                    <img src="assets/img/logo/f1.png" alt="">
                 </div>
             </div>
         </div>
@@ -59,17 +59,15 @@
                             <div class="main-menu f-right d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">    
-                                        <li><a href="index.html"> Home</a></li>
-                                        <li class="active"><a href="feature.html">Visualise</a></li>
-                                        <li><a href="services.html">Download</a></li>
-                                        <li><a href="pricing.html">Tutorial</a></li>
-                                        <!-- <li><a href="#">Pages</a>
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="elements.html">Overview</a></li>
+                                        <li class="active"><a href="query.html">Visualise</a>
                                             <ul class="submenu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="single-blog.html">Blog Details</a></li>
-                                                <li><a href="elements.html">Element</a></li>
+                                                <li><a href="query.html/#network-viewer">Network Viewer</a></li>
+                                                <li><a href="query.html/#module-viewer">Module Viewer</a></li>
                                             </ul>
-                                        </li> -->
+                                        </li>
+                                        <li><a href="dataset.html">Datasets</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -105,7 +103,7 @@
 
 	<!-- Start Sample Area -->
 	<section class="sample-text-area">
-		<div class="container box_1170">
+		<div class="container box_1170" id="network-viewer">
 			<h3 class="text-heading">Network Viewer</h3>
 				<p class="sample-text">
                 	A query based search which graphically displays all the connections of the queried genes, with the option 
@@ -197,7 +195,7 @@
 			</div>
 		</div>
 
-		<div class="container box_1170">
+		<div class="container box_1170" id="module-viewer">
 			<div class="section-top-border"></div>
 			<h3 class="text-heading">Module Viewer</h3>
 				<p class="sample-text">
@@ -255,22 +253,23 @@
 		</div>
 	</section>
     <!-- End Sample Area -->
-	
+
 	<footer>
+
 		<!-- Footer Start-->
 	   <div class="footer-main">
-		 <div class="footer-area footer-padding2">
+		 <div class="footer-area footer-padding">
 			 <div class="container">
 				 <div class="row  justify-content-between">
 					 <div class="col-lg-3 col-md-4 col-sm-8">
 						  <div class="single-footer-caption mb-30">
 							   <!-- logo -->
 							  <div class="footer-logo">
-								  <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+								  <a href="index.html"><img src="assets/img/logo/f1.png" alt="" style="width:100px"></a>
 							  </div>
 							  <div class="footer-tittle">
 								  <div class="footer-pera">
-									  <p class="info1">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore.</p>
+									  <p class="info1">A visualizer for the correlation network of rice genes based on fold changes.</p>
 								 </div>
 							  </div>
 						  </div>
@@ -280,11 +279,11 @@
 							 <div class="footer-tittle">
 								 <h4>Quick Links</h4>
 								 <ul>
-									 <li><a href="#">About</a></li>
-									 <li><a href="#">Features</a></li>
-									 <li><a href="#">Pricing</a></li>
-									 <li><a href="#">Download</a></li>
-									 <li><a href="#">Reviews</a></li>
+									 <li><a href="index.html">Home</a></li>
+									 <li><a href="overview.html">About</a></li>
+									 <li><a href="query.html">Visualise</a></li>
+									 <li><a href="datasets.html">Datasets</a></li>
+									 <li><a href="contact.html">Contact</a></li>
 								 </ul>
 							 </div>
 						 </div>
@@ -294,11 +293,11 @@
 							 <div class="footer-tittle">
 								 <h4>Support</h4>
 								 <ul>
-									 <li><a href="#">Report a bug</a></li>
-									 <li><a href="#">Privacy Policy</a></li>
-									 <li><a href="#">Terms & Conditions</a></li>
-									 <li><a href="#">Sitemap</a></li>
-									 <li><a href="#">FAQs</a></li>
+									 <li><a href="contact.html">Report a bug</a></li>
+									 <li><a href="contact.html">Privacy Policy</a></li>
+									 <li><a href="contact.html">Terms & Conditions</a></li>
+									 <li><a href="contact.html">Sitemap</a></li>
+									 <li><a href="contact.html">FAQs</a></li>
 								 </ul>
 							 </div>
 						 </div>
@@ -308,7 +307,7 @@
 							 <div class="footer-tittle">
 								 <h4>Newsletter</h4>
 								 <div class="footer-pera footer-pera2">
-								  <p>Heaven fruitful doesn't over lesser in days. Appear </p>
+								  <p>For notification for any updates please subscribe!</p>
 							  </div>
 							  <!-- Form -->
 							  <div class="footer-form">
@@ -330,9 +329,9 @@
 				 <div class="row align-items-center">
 					 <div class="col-xl-12 ">
 						 <div class="footer-copy-right">
-							 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+							<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This application is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://researchweb.iiit.ac.in/~mayank.musaddi" target="_blank">Mayank Musaddi</a>
+   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 						 </div>
 					 </div>
 				 </div>
@@ -396,10 +395,7 @@
 
 				$(function(){
 					$('#tissueM').change(function(){
-
 						var data= $(this).val();
-						console.log(data);
-						
 						var options = {
 							'- Module Color -' : '',
 						}
