--- a/frontend/query.html
+++ b/frontend/query.html
@@ -113,6 +113,7 @@
 			<div class="row">
 				<div class="col-lg-8">
 					<form class="form-contact" action="/network" method="post">
+					<!-- </form class="form-contact" action="/netrex/network" method="post"> -->
 						<div class="row">
 
 							<div class="input-group-icon col-sm-12">
@@ -206,7 +207,7 @@
 
 			<div class="row">
 				<div class="col-lg-8">
-					<form class="form-contact" action="/module" method="post">
+					<form class="form-contact" action="/netrex/module" method="post">
 						<div class="row">
 
 							<div class="input-group-icon col-sm-12">
