--- a/frontend/graph.html
+++ b/frontend/graph.html
@@ -313,6 +313,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js "></script>
 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.js" type="text/javascript"></script>      
+<link href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.css" rel="stylesheet" type="text/css"/>
+
 <script>
 	// var data = !{JSON.stringify(data)};
 
@@ -386,9 +389,11 @@
     		{ data: "attributes.wgcna_modules"},
     		{ data: "attributes.description"},
 			{ data: "attributes.msu_loc"},
-			
+			{ data: null,},
+
     		{ data: "attributes.go"},
 			{ data: "attributes.mapman"},
+			{ data: "attributes.kegg"},
 		];
 
 		$("#data-table>thead>tr").append( $('<th />', {text : 'Label'}) );
@@ -396,14 +401,16 @@
 		$("#data-table>thead>tr").append( $('<th />', {text : 'Module'}) );
 		$("#data-table>thead>tr").append( $('<th />', {text : 'Description'}) );
 		$("#data-table>thead>tr").append( $('<th />', {text : 'MSU ID'}) );
+		$("#data-table>thead>tr").append( $('<th />', {text : 'IC4R	Expression'}) );
 
 		$("#data-table>thead>tr").append( $('<th />', {text : 'GO'}) );
 		$("#data-table>thead>tr").append( $('<th />', {text : 'Mapman'}) );
+		$("#data-table>thead>tr").append( $('<th />', {text : 'KEGG'}) );
 
-		var desc_ind=[1,2,3,4];
-		var func_ind=[5,6];
+		var desc_ind=[1,2,3,4,5];
+		var func_ind=[6,7,8];
 		var fc_ind=[];
-		var ind = 7;
+		var ind = 9;
 
 		Object.keys(timestamps).forEach(function(key) {
 			var time = timestamps[key].substring(4);
@@ -428,8 +435,8 @@
 
 		for(var i in data.nodes){
 			for(var j in columns){
-				var attr = columns[j]["data"];	
-				if(!_.has(data.nodes[i], attr)){
+				var attr = columns[j]["data"];
+				if(attr!=null && !_.has(data.nodes[i], attr)){
 					set(data.nodes[i], attr, '-');
 				}
 			}
@@ -437,6 +444,13 @@
 
 	    var table = $('#data-table').DataTable( {
 	        data: data.nodes,
+			columnDefs: [ 
+				{
+        	    	targets: [5],
+        	    	data: null,
+        	    	defaultContent: "<button class='btn-light'>Click!</button>"
+        		} 
+			],
 			columns: columns,
 			dom: 'lBfrtip',
 			buttons: [
@@ -461,8 +475,13 @@
             	    show: [ ...fc_ind ],
             	    hide: [ ...desc_ind, ...func_ind]
             	}
-        	],
+			]
 		});
+
+		$('#data-table tbody').on( 'click', 'button', function () {
+    	    var data = table.row( $(this).parents('tr') ).data();
+			window.open("http://expression.ic4r.org/expression-api?term="+data.label, "hello", "width=1000,height=650,scrollbars=no,resizable=no,status=no,location=no,toolbar=no,menubar=no,left=100,top=100");
+    	} );
 
 		new $.fn.dataTable.Buttons( table, {
     	    buttons: [
@@ -497,7 +516,6 @@
 
 		$('.buttons-colvisGroup').click(function(){
 			$('.buttons-colvisGroup').each(function(){
-				console.log("Clicked");
 				$(this).removeClass("active");
 			}); 
 			$(this).addClass("active");
@@ -506,7 +524,6 @@
 	});
 
 </script>
-
 
 <!-- Sigma Related JS here -->
 
