--- a/frontend/query.html
+++ b/frontend/query.html
@@ -87,9 +87,8 @@
     <main>
     <!-- Slider Area Start-->
 
-	<div class="services-area">
+	<!-- <div class="services-area">
 		<div class="container">
-			<!-- Section-tittle -->
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-8">
 					<div class="section-tittle text-center mb-80">
@@ -98,13 +97,16 @@
 				</div>
 			</div>
 		</div>
+	</div> -->
+
+	<div class="services-area" style="margin-bottom: -100px;">
 	</div>
 	<!-- Slider Area End-->
 
 	<!-- Start Sample Area -->
 	<section class="sample-text-area">
 		<div class="container box_1170" id="network-viewer">
-			<h3 class="text-heading">Network Viewer</h3>
+			<h3 class="text-heading">Gene Query Visualisation</h3>
 				<p class="sample-text">
                 	A query based search which graphically displays all the connections of the queried genes, with the option 
                 	for viewing the module colors, the regulations at different time stamps, and immediate neighbours.
@@ -112,33 +114,47 @@
 
 			<div class="row">
 				<div class="col-lg-8">
-					<form class="form-contact" action="/network" method="post">
+					<form class="form-contact" action="/validate.html" method="get">
 					<!-- </form class="form-contact" action="/netrex/network" method="post"> -->
 						<div class="row">
 
 							<div class="input-group-icon col-sm-12">
-								<div class="icon"><i class="fas fa-cloud-sun-rain" aria-hidden="true"></i></div>
-								<div class="form-select" id="conditionHead">
-									<select name="condition" id="condition">
-										<option value="">- Condition -</option>
-										<option value="drought">Drought</option>
-										<option value="cold">Cold</option>
-										<option value="flood">Flood</option>
-										<option value="osmo">Osmosis</option>
-										<option value="aba">ABA</option>
-										<option value="ja">JA</option>
+								<div class="icon"><i class="fas fa-microscope" aria-hidden="true"></i></div>
+								<div class="form-select" id="speciesHead">
+									<select name="species" id="speciesN">
+											<option value="">- Species -</option>
+											<option value="rice">Oryza Sativa</option>
 									</select>
 								</div>
 							</div>
 
 							<div class="input-group-icon col-sm-12">
-								
 								<div class="icon"><i class="fas fa-microscope" aria-hidden="true"></i></div>
 								<div class="form-select" id="tissueHead">
 									<select name="tissue" id="tissueN">
 											<option value="">- Tissue -</option>
 											<option value="root">Root</option>
 											<option value="shoot">Shoot</option>
+									</select>
+								</div>
+							</div>
+
+							<div class="input-group-icon col-sm-12">
+								<div class="icon"><i class="fas fa-microscope" aria-hidden="true"></i></div>
+								<div class="form-select" id="conditionTypeHead">
+									<select name="conditionType" id="conditionTypeN">
+											<option value="">- Condition Type -</option>
+											<option value="stress">Abiotic Stress</option>
+											<option value="hormone">Phytohormone Change</option>
+									</select>
+								</div>
+							</div>
+
+							<div class="input-group-icon col-sm-12" style="display: none;" id="select-condition">
+								<div class="icon"><i class="fas fa-cloud-sun-rain" aria-hidden="true"></i></div>
+								<div class="form-select" id="conditionHead">
+									<select name="condition" id="conditionN">
+										<option value="">- Condition -</option>
 									</select>
 								</div>
 							</div>
@@ -149,7 +165,7 @@
 								</div>
 							</div>
 
-							<div class="col-sm-12">
+							<!-- <div class="col-sm-12">
 								<div class="switch-wrap d-flex justify-content-start">
 									<div class="primary-checkbox">
 										<input type="checkbox" id="neighbor" name="neighbor">
@@ -157,7 +173,7 @@
 									</div>
 									<p style="padding-left: 20px;margin-top: -8px;">Show top 100 neighbours of the queried genes</p>
 								</div>
-							</div>
+							</div> -->
 
 							<a id="example" class="genric-btn link">Load Example</a>
 
@@ -382,17 +398,76 @@
 			$(document).ready(()=>{
 
 				$('#example').click(()=>{
-					$("#condition").val('drought');
-					$("#conditionHead > div > span").html("Drought");
+					$("#select-condition").show();
+
+					$("#speciesN").val('rice');
+					$("#speciesHead > div > span").html("Oryza Sativa");
 
 					$("#tissueN").val('root');
 					$("#tissueHead > div > span").html("Root");
+
+					$("#conditionTypeN").val('stress').trigger('change');
+					$("#conditionTypeHead > div > span").html("Abiotic Stress");
+
+					$("#conditionN").val('drought');
+					$("#conditionHead > div > span").html("Drought");
 
 					$('textarea#genes').val('Os02g0255500,Os01g0285300,Os06g0644200,Os03g0437200,Os10g0575000,Os12g0586000,Os06g0211200,Os02g0766700,Os09g0456200,Os08g0472000,Os02g0776400,Os03g0316200,Os07g0687900,Os05g0528000,Os11g0177400,Os05g0537400,Os01g0583100,Os07g0164900,Os10g0457600,Os04g0209200,Os12g0617400,Os03g0645900,Os07g0154100,Os01g0385400,Os02g0526400,Os01g0165000,Os01g0615100,Os03g0125100,Os03g0128700,Os05g0595100,Os11g0113700');
 					$('#neighbor').prop('checked', false);
 				});
 
 				$(function(){
+
+					$('#conditionTypeN').change(function(){
+						var data= $(this).val();
+
+						var options = {
+							'- Condition -' : '',
+						};
+						var stressCondition = {
+							'- Condition -' : '',
+							'Drought' : 'drought',
+							'Cold' : 'cold',
+							'Flood' : 'flood',
+							'Osmosis' : 'osmo',
+						};
+						var hormoneCondition = {
+							'- Condition -' : '',
+							'ABA' : 'aba',
+							'JA' : 'ja',
+						};
+						
+						if(data == "stress"){
+							$("#select-condition").show();
+							$("#conditionN").val('');
+							$("#conditionHead > div > span").html("- Condition -");
+							options = stressCondition;
+						}
+						else if(data == "hormone"){
+							$("#select-condition").show();
+							$("#conditionN").val('');
+							$("#conditionHead > div > span").html("- Condition -");
+							options = hormoneCondition;
+						}
+						else{
+							$("#select-condition").hide();
+						}
+
+						var $el = $("#conditionN");
+						$el.empty(); // remove old options
+						$.each(options, function(key,value) {
+						  $el.append($("<option></option>")
+						     .attr("value", value).text(key));
+						});
+						var $el = $("#conditionHead > div > ul");
+						$el.empty(); // remove old options
+						$.each(options, function(key,value) {
+						  $el.append($("<li></li>")
+						     .attr("data-value", value).attr("class", "option").text(key));
+						});
+				   });
+				   $('#conditionTypeN').trigger('change');
+
 					$('#tissueM').change(function(){
 						var data= $(this).val();
 						var options = {
